Ver 74.03 fix the gap and the form layout

--- a/public/css/template_style.css
+++ b/public/css/template_style.css
@@ -81,13 +81,13 @@
 
 #requestformtemplate .form-section {
     display: grid;
-
+  
     gap: 20px; /* ระยะห่างระหว่างฟิลด์ */
     background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    margin: 20px;
+    margin: 40px;
 
 }
 
@@ -145,7 +145,7 @@
 #requestformtemplate .form-group {
     display: flex;
     flex-direction: column;
-    gap: 10px; /* Consistent spacing between fields */
+    gap: 5px;/* Consistent spacing between fields */
 }
 
 #requestformtemplate .form-group.personal-info,
@@ -154,17 +154,17 @@
     flex-direction: column;
     gap: 10px; /* ระยะห่างระหว่างฟิลด์ */
 }
-
-#requestformtemplate .form-group.personal-info {
-    grid-column: 1 ; /* อยู่ฝั่งซ้าย */
+#requestformtemplate .form-group.personal-info{
+    margin-top: 20px;
+}
+#requestformtemplate .form-row {
+    display: flex;
+    gap: 20px;
 }
 
-#requestformtemplate .form-group.address-section {
-    grid-column: 2; /* ย้ายไปฝั่งขวา */
-    padding-top: 0;
-}
-
-#requestformtemplate .form-group.request-info {
-    grid-column: 1 / 3; /* ครอบคลุมสองคอลัมน์และอยู่ด้านล่าง */
+#requestformtemplate .form-field {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
